searchBar align fix

--- a/less/style.less
+++ b/less/style.less
@@ -77,8 +77,3 @@ a, a:hover, a:visited, a:active, a:focus {
 .bootbox {
 	z-index: 100001;
 }
-
-.logo {
-	width: 220px;
-	margin-top: 0px;
-}
